Fixes code panel spacing

--- a/web/src/app/coding/code-blockly/code-blockly.component.scss
+++ b/web/src/app/coding/code-blockly/code-blockly.component.scss
@@ -1,6 +1,6 @@
 .placeholder{
     width: 90%;
-    height: 550px;
+    height: 650px;
 }
 
 .flex-container {
